--- a/src/style.css
+++ b/src/style.css
@@ -1,53 +1,120 @@
+@font-face {
+  font-family: 'luckiest_guyregular';
+  src: url('./assets/fonts/luckiest-guy/luckiestguy-regular-webfont.woff2') format('woff2'),
+       url('./assets/fonts/luckiest-guy/luckiestguy-regular-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-  
-  h1 {
-    height: 10vh;
-    text-align: center;
-    font-size: 40px;
-  }
-  
-  main {
-    margin: 0 auto;
-    height: 80vh;
-    width: 80vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10vw;
-  }
-  
-  #board-one,
-  #board-two {
-    min-width: 500px;
-    aspect-ratio: 1 / 1;
-    background-color: rgb(95, 95, 95);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 9px;
-  }
-  
-  .board-row {
-    display: flex;
-    justify-content: center;
-    gap: 9px;
-    max-width: 100%;
-  }
-  
-  .board-field {
-    height: 40px;
-    aspect-ratio: 1 / 1;
-    background-color: aqua;
-  }
-  
-  .board-field:hover {
-    background-color: skyblue;
-  }
-  
-  .black {
-    background-color: black ;
-  }
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: #404040;
+}
+
+main {
+  margin: 0 auto;
+  height: 80vh;
+  width: 80vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#start-screen {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#main-heading {
+  margin-top: 10vh;
+  height: 10vh;
+  text-align: center;
+  font-size: 96px;
+  font-family: 'luckiest_guyregular';
+  color: white;
+}
+
+#play-now {
+  margin-top: 25vh;
+  background-color: black;
+  width: 490px;
+  height: 130px;
+  border: none;
+  border-radius: 20px;
+  color: white;
+  font-size: 48px;
+  font-family: 'luckiest_guyregular';
+}
+
+#play-now:active {
+  background-color: white;
+  color: black;
+}
+
+#placement-heading {
+  margin: 10vh 0 1rem 0;
+  background-color: white;
+  height: 8vh;
+  width: 500px;
+  text-indent: 5px;
+  font-size: 28px;
+  font-family: 'luckiest_guyregular';
+  border-radius: 8px;
+}
+
+#start-game {
+  margin-top: 2vh;
+  height: 4vh;
+  width: 200px;
+  border: none;
+  background-color:black;
+  color: white;
+  font-size: 24px;
+  font-family: 'luckiest_guyregular';
+  border-radius: 12px;
+}
+
+#start-game:active {
+  background-color: white;
+  color: black;
+} 
+
+
+#board-one,
+#board-two {
+  min-width: 500px;
+  aspect-ratio: 1 / 1;
+  background-color: rgb(95, 95, 95);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 9px;
+}
+
+.board-row {
+  display: flex;
+  justify-content: center;
+  gap: 9px;
+  max-width: 100%;
+}
+
+.board-field {
+  height: 40px;
+  aspect-ratio: 1 / 1;
+  background-color: aqua;
+}
+
+.board-field:hover {
+  background-color: skyblue;
+}
+
+.black {
+  background-color: black ;
+}
