--- a/src/style.css
+++ b/src/style.css
@@ -10,23 +10,25 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'luckiest_guyregular';
 }
 
 body {
   background-color: #404040;
+  font-size: 16px;
 }
 
 main {
   margin: 0 auto;
   height: 80vh;
   width: 80vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
 }
 
-#start-screen {
+main,
+#start-screen,
+#board-one,
+#board-two {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -37,7 +39,6 @@ main {
   height: 10vh;
   text-align: center;
   font-size: 96px;
-  font-family: 'luckiest_guyregular';
   color: white;
 }
 
@@ -50,7 +51,6 @@ main {
   border-radius: 20px;
   color: white;
   font-size: 48px;
-  font-family: 'luckiest_guyregular';
 }
 
 #play-now:active {
@@ -59,17 +59,18 @@ main {
 }
 
 #placement-heading {
+  position: relative;
   margin: 10vh 0 1rem 0;
   background-color: white;
   height: 8vh;
   width: 500px;
   text-indent: 5px;
   font-size: 28px;
-  font-family: 'luckiest_guyregular';
   border-radius: 8px;
 }
 
-#start-game {
+#start-game,
+#play-again {
   margin-top: 2vh;
   height: 4vh;
   width: 200px;
@@ -77,11 +78,11 @@ main {
   background-color:black;
   color: white;
   font-size: 24px;
-  font-family: 'luckiest_guyregular';
   border-radius: 12px;
 }
 
-#start-game:active {
+#start-game:active,
+#play-again:active {
   background-color: white;
   color: black;
 } 
